--- a/ProjectSuatuHari/Story/Story.storyboard
+++ b/ProjectSuatuHari/Story/Story.storyboard
@@ -510,11 +510,62 @@
                         <outlet property="AJawab" destination="sYg-yZ-jOn" id="pHb-JK-cF5"/>
                         <outlet property="HCariImageView" destination="A0l-Tn-5c4" id="exr-PF-p9J"/>
                         <outlet property="HJawab" destination="nUa-kE-4P4" id="EUT-4G-68n"/>
+                        <segue destination="UKt-ns-WBC" kind="show" identifier="toPopUp2" id="MME-nI-aQv"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pLH-zu-oMT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1887.8477306002926" y="741.796875"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="Pwv-sO-FA4">
+            <objects>
+                <viewController id="UKt-ns-WBC" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MEr-W0-NnH">
+                        <rect key="frame" x="0.0" y="0.0" width="704" height="944"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="kerjabagus2" translatesAutoresizingMaskIntoConstraints="NO" id="CCa-C5-zAX">
+                                <rect key="frame" x="-20" y="204" width="744" height="537"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vRg-D4-RI3">
+                                <rect key="frame" x="159" y="541" width="387" height="177"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="lanjut">
+                                    <preferredSymbolConfiguration key="preferredSymbolConfigurationForImage" configurationType="pointSize" pointSize="10"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <action selector="lanjutBtn:" destination="erd-pN-770" eventType="touchUpInside" id="Hmp-ve-bUS"/>
+                                    <segue destination="mbm-Zw-cbz" kind="show" id="77h-j3-bcW"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="a1x-cw-7rd"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="3n3-h9-uvj"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4pU-rw-5ts" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2564" y="741"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="mIB-je-mnd">
+            <objects>
+                <viewController modalPresentationStyle="fullScreen" id="mbm-Zw-cbz" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dQr-mT-D1P">
+                        <rect key="frame" x="0.0" y="0.0" width="1366" height="1024"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="lqg-Gq-bDV"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="SrF-3f-IlC"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z6x-1B-Lup" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3261" y="745"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
